<resources>
    <string name="app_name">PatuhOAT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Obat</string>
    <string name="title_activity_aturobat">Pengaturan Pegingat</string>
    <string name="title_activity_beranda">PatuhOAT</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_login">Masuk</string>
    <string name="title_activity_daftar">Daftar</string>

    <string-array name="kategori">
        <item>- Pilih Kategori -</item>
        <item>Pasien</item>
        <item>Keluarga</item>
        <item>Dokter</item>
    </string-array>
    <string name="title_activity_report">Laporan Kepatuhan</string>
    <string name="title_activity_minumobat">PatuhOAT</string>
    <string name="title_activity_reward">Reward</string>
    <string name="title_activity_badreward">Badreward</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register">Create a Acount</string>
    <string name="display_name">Display_Name</string>
    <string name="email">Email</string>
    <string name="password">Password (min 8 karakter)</string>
    <string name="create_a_new_acount">create a New Acount</string>
    <string name="logout">Logout</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_chat">ChatActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_request_fragment">Hello Requests Fragment</string>
    <string name="hello_fragment_chats">Hello Fragment Chats</string>
    <string name="hello_friends_fragment">hello Friends Fragment</string>
    <string name="display_name_setting">Display Name</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_chat2">ChatActivity2</string>
    <string name="title_home">home</string>
    <string name="title_artikel">Artikel</string>
    <string name="title_chats">Chats</string>
    <string name="settings">Settings</string>


    <string-array name="jenis_user">

        <item>Pasien</item>
        <item>Keluarga</item>
        <item>Dokter</item>

    </string-array>
</resources>
