<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.Light.NoActionBar"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/registtoolbar"
        layout="@layout/app_bar_layout"></include>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/logofix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="15dp"

                android:layout_marginTop="8dp"
                android:text="@string/create_a_new_acount"
                android:textColor="#000"
                android:textSize="14dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.778"
                tools:ignore="RtlCompat" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/display_name"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlCompat">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlCompat">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/password"

                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_no_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="3dp"
                    android:hint="No Hp"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reg_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="Alamat" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="0dp"
                    android:text="Pilih Kategori Pengguna :"
                    android:textColor="@color/hitamflat"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <Spinner
                    android:id="@+id/reg_jenis_user"

                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    tools:ignore="RtlCompat">

                </Spinner>
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:text="Jenis Kelamin"
                android:textColor="@color/hitamflat"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/reg_JenisLK"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_password"
                tools:ignore="RtlCompat" />

            <RadioGroup
                android:id="@+id/reg_JenisLK"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.599"
                tools:ignore="RtlCompat">

                <RadioButton
                    android:id="@+id/laki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="Laki-Laki"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/reg_password" />

                <RadioButton
                    android:id="@+id/perempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:text="Perempuan"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.339"
                    app:layout_constraintStart_toEndOf="@+id/laki"
                    app:layout_constraintTop_toBottomOf="@+id/reg_password" />
            </RadioGroup>


            <Button
                android:id="@+id/regist_btn"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttoncapsul"
                android:text="@string/register" />

            <LinearLayout
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="10dp"
                    android:text="Sudah memili akun?" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="Login."

                    android:textColor="@color/hitamflat"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
